--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node":">20.0.0"
+    "node": ">20.0.0"
   },
   "scripts": {
-    "build":"npm install --prefix frontend && npm install --prefix backend && npm run build --prefix frontend",
+    "build": "npm install --prefix frontend && npm install --prefix backend && npm run build --prefix frontend",
     "start": "npm run start --prefix backend"
   },
   "repository": {
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/krishh-9085/Chatty/issues"
   },
-  "homepage": "https://github.com/krishh-9085/Chatty#readme"
+  "homepage": "https://github.com/krishh-9085/Chatty#readme",
+  "devDependencies": {
+    "daisyui": "^4.12.24"
+  }
 }
